Bug 334553 - Can't receive notes
Summary: Can't receive notes
Status: RESOLVED FIXED
Alias: None
Product: knotes
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.13.1
Platform: openSUSE Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-09 12:58 UTC by Rafael Linux User
Modified: 2014-09-23 21:24 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Linux User 2014-05-09 12:58:40 UTC
Since last update to 4.13, can't receive notes from others in a LAN. Before the update, I was able to send and to receive notes from other Knotes PCs after I checked "Allow receive notes". However, despite that option is enabled, I receive notes from others but they are not showed by Knotes.

Moreover, Knotes is not launching at KDE boot, like it usually did before updating to 4.13.

Reproducible: Always

Steps to Reproduce:
1. Launch Knotes
2. Wait for other PC note

Actual Results:  
Note is not received (but sender have no error notification, telling was not able to locate destination)

Expected Results:  
Knotes should show the note sent from the other PC Knotes

Just now, Knotes tray logo is not showed.
Comment 1 Laurent Montel 2014-05-10 05:39:19 UTC
How do you know that it's received ?
Comment 2 Rafael 2014-05-10 17:50:27 UTC
It's easy. When you send a note to other PC, if destiny PC can't be reached, you'll see an error windows from Knotes saying the sent note was not delivered (as if you try to send the note to an inexistent PC in your LAN, the result is the same). However, that is not happening. Knotes don't show an error window.
Comment 3 Laurent Montel 2014-05-11 08:01:46 UTC
And when it's "destiny PC " is online it works ?
when you launch knotes you can see notes or not ?
Comment 4 Rafael 2014-05-11 09:56:28 UTC
Maybe I didn't explain me right.

If destiny PC is offline, you'll receive a error window , talking about destiny is unreachable (as it should be). However, if destiny PC is online, the note is not showed in destiny PC but no error is showed in sender's PC, so I imagine the receiver is getting the note sent, but can't show it by some issue in Knotes.
Comment 5 Rajesh Ganesan 2014-05-17 02:40:59 UTC
I confirm this bug. It's an excellent and useful feature. I miss it a lot.
Comment 6 Rafael Linux User 2014-06-17 08:34:49 UTC
KNotes  4.13.2
The "easy way" to confirm this bug: Sending a note to ourself.
1. Disable firewall (to be sure is not a firewall problem)
2. Create a note with KNote
3. Right button on that note and select "Send (to)"  in contextual menu.
4. It should appear our name and server name. Select that line.
5. Click "Accept".

¿Did you received the note?
Me neither. However, this bug is still "UNCONFIRMED" ....
Comment 7 Laurent Montel 2014-09-07 17:21:36 UTC
Git commit d5998911a3d956e67d9c5b7d4ae4f96dbc14bd10 by Montel Laurent.
Committed on 07/09/2014 at 17:20.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 334553 - Can't receive notes

this bug was found with my script to convert to new connect api. I like my script :)

FIXED-IN: 4.14.1

M  +1    -1    agents/notesagent/notesmanager.cpp

http://commits.kde.org/kdepim/d5998911a3d956e67d9c5b7d4ae4f96dbc14bd10
Comment 8 Rafael 2014-09-07 20:05:29 UTC
Fantastic news. My OpenSUSE 13.1 still is in 4.14.0-12 version, so I can't verify if it's solved finally. Was a long time to fix  :(   cause is an excellent productivity tool for intranet.

Thank you
Comment 9 Rafael 2014-09-23 21:24:19 UTC
Solved. OpenSUSE 13.1 KDE repos were updated finally and it works like always did.

Thank you very much