Fix Bug 334553 - Can't receive notes

this bug was found with my script to convert to new connect api. I like my script :)

FIXED-IN: 4.14.1
BUG: 334553